[package]
name = "time_back"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
active-win-pos-rs = "0.8"
chrono = "0.4"
confy = "0.6"
dashmap = { version = "5.5.3", features = [ "serde" ] }
device_query = "2.0.0"
eframe = "0.27"
egui_extras = "0.27"
egui_plot = "0.27"
humantime = "2.1"
png = "0.17"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tinyfiledialogs = "3.9"
